Avoid page breaks inside work history entry

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -39,6 +39,10 @@ header {
     .company-name, .date {
         font-weight: bold;
     }
+
+    .work-entry {
+        break-inside: avoid-page;
+    }
 }
 
 section {
